--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -8,4 +8,5 @@
     <integer name="config_deviceHardwareKeys">73</integer>
     <integer name="config_deviceHardwareWakeKeys">73</integer>
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
+    <bool name="config_trustLegacyEncryption">true</bool>
 </resources>
